syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.authentication.client.api.grpc";
option java_outer_classname = "PermissionServiceProto";

service PermissionService {
  rpc findAll (PermissionFindAllGrpcCmd) returns (PageOfPermissionFindAllGrpcDTO);
  rpc findById (google.protobuf.Int64Value) returns (PermissionFindByIdGrpcDTO);
}

message PermissionFindAllGrpcCmd {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue code = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.Int32Value current = 5;
  google.protobuf.Int32Value page_size = 6;
}

message PermissionFindAllGrpcDTO {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue code = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue description = 4;
  bool hasDescendant = 5;
}

message PermissionFindByIdGrpcDTO {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue code = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue description = 4;
  bool hasDescendant = 5;
}

message PageOfPermissionFindAllGrpcDTO {
  repeated PermissionFindAllGrpcDTO content = 1;
  int32 total_pages = 2;
}
